2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-link.[ch] (dh_link_get_type_as_string): Add UI strings
	for the link types.

2008-10-01  Richard Hult  <richard@imendio.com>

	* src/Makefile.am:
	* src/dh-book-tree.c: (book_tree_class_init):
	* src/dh-marshal-main.c:
	* src/dh-search.c: (search_class_init): Get rid of the
	marshal-main file.

2008-10-01  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: (message_received_cb), (main): Prepare for a new
	search method.

2008-10-01  Richard Hult  <richard@imendio.com>

	* Makefile.am: Adapt to recent intltool changes.

2008-10-01  Richard Hult  <richard@imendio.com>

	* configure.in:
	* Makefile.am:
	* data/Makefile.am: Move pc file to data/.

2008-10-01  Richard Hult  <richard@imendio.com>

	* src/*.c: Update modelines to what I actually use.

2008-10-01  Richard Hult  <richard@imendio.com>

	* src/*.c: Only include single gtk header and make includes more
	consistant.

2008-10-01  Richard Hult  <richard@imendio.com>

	* configure.in:
	* src/Makefile.am:
	* src/dh-book-tree.c: (book_tree_create_pixbufs):
	* src/dh-main.c: (main):
	* src/dh-parser.c: (parser_read_gz_file):
	* src/dh-preferences.c: (dh_preferences_show_dialog):
	* src/dh-window.c: Modernize the build setup, and make zlib an
	unconditional dependency.

2008-10-01  Richard Hult  <richard@imendio.com>

	* libdevhelp-1.0.pc.in: Remove more gecko remains.

2008-10-01  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version. Also remove unneeded AC_SUBST.

2008-10-01  Richard Hult  <richard@imendio.com>

	Add support for the keyword types added to gtk-doc output in
	devhelp2 files:
	
	* src/dh-link.c: (dh_link_new): Init ref count.
	* src/dh-link.h: Add the types here.
	
	* src/dh-keyword-model.c: (dh_keyword_model_set_words):
	* src/dh-parser.c: (parser_start_node_cb): Parse them.

2008-07-04  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c:
	* src/dh-preferences.c: Avoid C++ comments and remove a couple of
	FIXMEs.
