@@ -1,5 +1,12 @@
 2008-10-02  Richard Hult  <richard@imendio.com>
 
+	* src/dh-base.c (dh_base_get_window): New function that returns an
+	existing window on the current workspace or creates a new one.
+	(dh_base_get_window_on_current_workspace): Make this work somewhat
+	on non-X11, by returning any window (instead of none).
+
+2008-10-02  Richard Hult  <richard@imendio.com>
+
 	* src/dh-link.[ch] (dh_link_get_type_as_string): Add UI strings
 	for the link types.
 
